@@ -4,6 +4,7 @@ flpsed ChangeLog
  - fix long standing redraw problem.
  - fix PostScript DSC problem (reported by Jim Cline).
  - ask before overwriting files.
+ - fix problem with non-A4 paper sizes.
 
 flpsed-0.3.9
  - fix problem with documents that embed standard font replacements
